outs/test-01.txt
make: Entering directory '/mnt/nfs/homes/nsalhi/Documents/Pipex_true'
gcc -Wall -Wextra -Werror -g   -c -o bonus/pipex_bonus.o bonus/pipex_bonus.c
bonus/pipex_bonus.c: In function ‘main’:
bonus/pipex_bonus.c:82:3: error: statement with no effect [-Werror=unused-value]
   82 |   close cmd.fds[1];
      |   ^~~~~
bonus/pipex_bonus.c:82:8: error: expected ‘;’ before ‘cmd’
   82 |   close cmd.fds[1];
      |        ^~~~
      |        ;
cc1: all warnings being treated as errors
make: *** [<builtin>: bonus/pipex_bonus.o] Error 1
make: Leaving directory '/mnt/nfs/homes/nsalhi/Documents/Pipex_true'
